--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1599.0",
     "axios": "^1.6.8",
     "celsius": "^1.0.2",
     "cors": "^2.8.5",
-    "express": "^4.19.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3-transform": "^2.10.3",
+    "uuid": "^9.0.1"
   }
 }
